--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,36 @@
 {
+  "name": "chat-app-frontend",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
-    "axios": "^1.7.7",
-    "react-router-dom": "^6.26.2",
-    "socket.io-client": "^4.8.0"
+    "axios": "^0.21.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "socket.io-client": "^4.0.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
